--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html>
+<html style="font-family:arial">
     <head>
         <nav>
-            <a href="/blog" style="font-family:arial">All Blog Posts</a> |
-            <a href="/newpost" style="font-family:arial">Make a New Post</a> |
+            <a href="/blog">All Blog Posts</a> |
+            <a href="/newpost">Make a New Post</a> |
         </nav>
         <title>{{title}}</title>
     </head>
