Added error messages

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -11,7 +11,7 @@
     <form method="post">
         <label for="blog">Title:</label>
             <input name="blog" type="text" value="{{blog}}">
-        <p class="error">{{title_error}}</p>
+        <p class="error">{{name_error}}</p>
         <label for="body">Content:</label>
             <input name="body" type="text area" value="{{body}}">
             <p class="error">{{body_error}}</p>
