--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,10 @@
             }
         </style>
         <nav>
-            <a href="/blog">All Blog Posts</a> |
+            <a href="/blog">Home</a> |
             <a href="/newpost">Make a New Post</a> |
             <a href="/signup">Create Account</a> |
+            <a href="/login">Login</a> |
             <a href='/logout'>Logout</a>
         </nav>
         <title>{{title}}</title>
