--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
             }
         </style>
         <nav>
-            <a href="/blog">Home</a> |
+            <a href="/">Home</a> |
+            <a href="/blog">All Blog Posts</a> |
             <a href="/newpost">Make a New Post</a> |
             <a href="/signup">Create Account</a> |
             <a href="/login">Login</a> |
