--- a/templates/individual.html
+++ b/templates/individual.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h2>{{blog.name}}</h2>
+<h4><a href='/blog?user={{blog.owner.id}}'>{{blog.owner.username}}</a></h4>           
     <p>{{blog.body}}</p>
 
 {% endblock %}
